[gd_scene load_steps=29 format=2]

[ext_resource path="res://plugins/worker_drone/drone.tscn" type="PackedScene" id=1]
[ext_resource path="res://plugins/designer_map/floor_mesh.tres" type="PlaneMesh" id=2]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/spawn_platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/map/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://plugins/basic_manufacturing/drill/ore.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/block/debug/vane.obj" type="ArrayMesh" id=6]
[ext_resource path="res://plugins/basic_manufacturing/storage_pod/storage_pod.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/menu/theme/theme.tres" type="Theme" id=8]
[ext_resource path="res://core/shortcut/ui_accept.tres" type="ShortCut" id=9]
[ext_resource path="res://core/map/game_master.gd" type="Script" id=10]
[ext_resource path="res://core/menu/dialog/independent_panel.tscn" type="PackedScene" id=11]
[ext_resource path="res://core/camera/free_camera.gd" type="Script" id=14]
[ext_resource path="res://core/designer/load_vehicle.gd" type="Script" id=15]
[ext_resource path="res://plugins/basic_manufacturing/munitions_factory/munitions_factory.tscn" type="PackedScene" id=16]
[ext_resource path="res://plugins/basic_manufacturing/refinery/refinery.tscn" type="PackedScene" id=17]
[ext_resource path="res://plugins/basic_manufacturing/roboport/roboport.tscn" type="PackedScene" id=21]
[ext_resource path="res://core/shortcut/ui_cancel.tres" type="ShortCut" id=22]
[ext_resource path="res://plugins/designer_map/menu.gd" type="Script" id=23]
[ext_resource path="res://plugins/designer_map/pill_material.tres" type="Material" id=24]
[ext_resource path="res://plugins/designer_map/pill_mesh.tres" type="CapsuleMesh" id=25]
[ext_resource path="res://plugins/designer_map/map.gd" type="Script" id=26]
[ext_resource path="res://plugins/designer_map/pill_shape.tres" type="Shape" id=27]
[ext_resource path="res://plugins/designer_map/gui.gd" type="Script" id=28]
[ext_resource path="res://plugins/designer_map/wall_shape.tres" type="Shape" id=29]
[ext_resource path="res://plugins/designer_map/floor_material.tres" type="Material" id=30]
[ext_resource path="res://plugins/designer_map/floor_shape.tres" type="Shape" id=31]
[ext_resource path="res://plugins/designer_map/change_team.gd" type="Script" id=32]
[ext_resource path="res://core/unit/unit_group.tscn" type="PackedScene" id=33]

[node name="Designer" type="Node"]
process_priority = 1
script = ExtResource( 10 )
map_name = "designer"

[node name="Map" type="Node" parent="."]
script = ExtResource( 26 )

[node name="Floor" type="StaticBody" parent="Map"]
collision_layer = 129
collision_mask = 2147483777
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Map/Floor"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor"]
visible = false
shape = ExtResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="NorthWall" type="CollisionShape" parent="Map/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 501 )
shape = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="SouthWall" type="CollisionShape" parent="Map/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -501 )
shape = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="EastWall" type="CollisionShape" parent="Map/Floor"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 501, 0, 0 )
shape = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="WestWall" type="CollisionShape" parent="Map/Floor"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -501, 0, 0 )
shape = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Ore" parent="Map" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 70 )

[node name="Ore2" parent="Map" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0, 70 )

[node name="Ore3" parent="Map" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0, 70 )

[node name="Vane" type="MeshInstance" parent="Map"]
transform = Transform( 12, 0, 0, 0, 12, 0, 0, 0, 12, 0, 1.5, 0 )
mesh = ExtResource( 6 )
material/0 = null

[node name="Pill" type="RigidBody" parent="Map"]
transform = Transform( 1, 0, 0, 0, -0.0965233, 0.995331, 0, -0.995331, -0.0965233, -22.8603, 20.2449, 13.7809 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Pill"]
shape = ExtResource( 27 )

[node name="MeshInstance" type="MeshInstance" parent="Map/Pill"]
transform = Transform( 1, 0, 0, 0, 1, 7.45058e-09, 0, -7.45058e-09, 1, 0, 0, 0 )
mesh = ExtResource( 25 )
material/0 = ExtResource( 24 )

[node name="DirectionalLight" type="DirectionalLight" parent="Map"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 16.4104, 0 )
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_depth_range = 1

[node name="Player" parent="." instance=ExtResource( 33 )]

[node name="SpawnPlatform" parent="Player" instance=ExtResource( 3 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -27, 0, 0 )
max_health = 2305843009213693952
team = "Player"

[node name="Drone" parent="Player" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.999754, -0.022164, 0, 0.022164, 0.999754, -45.0914, 9.15196, 71.3294 )
team = "Player"

[node name="StoragePod" parent="Player" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -72.5, 1.3, 40 )
team = "Player"

[node name="MunitionsFactory" parent="Player" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.5, 0.999969, 17.5 )
team = "Player"

[node name="Refinery" parent="Player" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54.5, 0.500031, 4.5 )
team = "Player"
position_offset = Vector3( 0, 0.5, 0 )

[node name="Roboport" parent="Player" instance=ExtResource( 21 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47, 0.500031, 35.5 )
max_health = 10
team = "Player"
drone_limit = 10
_radius2 = 10000.0

[node name="Enemy" parent="." instance=ExtResource( 33 )]

[node name="SpawnPlatform" parent="Enemy" instance=ExtResource( 3 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 27, 0, 0 )
max_health = 2305843009213693952
team = "Enemy"

[node name="Drone" parent="Enemy" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.999754, -0.022164, 0, 0.022164, 0.999754, 0.936497, 2.85958, 30.7343 )
team = "Enemy"

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.770113, 0.200224, -0.60567, 0, 0.949464, 0.313876, 0.637908, -0.24172, 0.731194, -47.744, 14.2517, 67.2209 )
far = 1000.0
script = ExtResource( 14 )
speed = 50.0

[node name="HUD" parent="." instance=ExtResource( 4 )]
camera = NodePath("../Camera")

[node name="ChangeTeam" type="OptionButton" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -162.842
margin_top = 56.0561
margin_right = -15.842
margin_bottom = 98.0561
focus_mode = 0
theme = ExtResource( 8 )
text = "Player"
items = [ "Player", null, false, 1, null, "Enemy", null, false, 2, null ]
selected = 0
script = ExtResource( 32 )
options = PoolStringArray( "Player", "Enemy" )

[node name="GUI" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" parent="GUI" instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -190.0
margin_right = 160.0
margin_bottom = 190.0
script = ExtResource( 23 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Main"]
margin_left = 40.0
margin_top = 40.0
margin_right = 305.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Continue" type="Button" parent="GUI/Main/VBoxContainer"]
margin_right = 265.0
margin_bottom = 41.6293
text = "Continue"

[node name="Save" type="Button" parent="GUI/Main/VBoxContainer"]
margin_top = 51.0
margin_right = 265.0
margin_bottom = 92.6293
text = "Save"

[node name="Restart" type="Button" parent="GUI/Main/VBoxContainer"]
margin_top = 102.0
margin_right = 265.0
margin_bottom = 143.629
text = "Restart"

[node name="Designer" type="Button" parent="GUI/Main/VBoxContainer"]
margin_top = 204.0
margin_right = 265.0
margin_bottom = 245.629
text = "Designer"

[node name="Exit" type="Button" parent="GUI/Main/VBoxContainer"]
margin_top = 255.0
margin_right = 265.0
margin_bottom = 296.629
text = "Exit"

[node name="LoadVehicle" parent="GUI" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -190.0
margin_right = 160.0
margin_bottom = 190.0
script = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/LoadVehicle"]
margin_left = 40.0
margin_top = 40.0
margin_right = 305.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="GUI/LoadVehicle/VBoxContainer"]
margin_right = 265.0
margin_bottom = 20.0

[node name="PanelContainer" type="PanelContainer" parent="GUI/LoadVehicle/VBoxContainer"]
margin_top = 30.0
margin_right = 265.0
margin_bottom = 256.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 11.0
margin_right = 249.0
margin_bottom = 215.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Files" type="VBoxContainer" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 233.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Template" type="Button" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer/ScrollContainer/Files"]
margin_right = 233.0
margin_bottom = 41.6293
size_flags_horizontal = 3
text = "Vehicle name"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/LoadVehicle/VBoxContainer"]
margin_top = 266.0
margin_right = 265.0
margin_bottom = 307.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="GUI/LoadVehicle/VBoxContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = ExtResource( 22 )
text = "Cancel"

[node name="Load" type="Button" parent="GUI/LoadVehicle/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = ExtResource( 9 )
text = "Load"
[connection signal="load_game" from="." to="HUD" method="_on_Designer_load_game"]
[connection signal="load_game" from="." to="Map" method="_on_Designer_load_game"]
[connection signal="save_game" from="." to="HUD" method="_on_Designer_save_game"]
[connection signal="save_game" from="." to="Map" method="_on_Designer_save_game"]
[connection signal="item_selected" from="HUD/ChangeTeam" to="HUD/ChangeTeam" method="_on_ChangeTeam_item_selected"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Continue" to="GUI/Main" method="_on_Continue_pressed"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Save" to="." method="save_game" binds= [ "_designer" ]]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Restart" to="GUI/Main" method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Designer" to="GUI/Main" method="_on_Designer_pressed"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Exit" to="GUI/Main" method="_on_Exit_pressed"]
[connection signal="pressed" from="GUI/LoadVehicle/VBoxContainer/HBoxContainer/Cancel" to="GUI" method="set_enabled" binds= [ false ]]
[connection signal="pressed" from="GUI/LoadVehicle/VBoxContainer/HBoxContainer/Load" to="GUI/LoadVehicle" method="_on_Load_pressed"]
