[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/map/hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/map/game_master.gd" type="Script" id=2]
[ext_resource path="res://test/matter/munition.gd" type="Script" id=3]
[ext_resource path="res://core/unit/unit_group.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/unit/vehicle.gd" type="Script" id=5]
[ext_resource path="res://plugins/basic_manufacturing/storage_pod/storage_pod.tscn" type="PackedScene" id=8]
[ext_resource path="res://plugins/worker_drone/drone.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/free_camera.gd" type="Script" id=11]

[sub_resource type="PlaneShape" id=1]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 20, 20 )

[node name="GameMaster" type="Node"]
script = ExtResource( 2 )
map_name = "_matter_munition_test"

[node name="Node" type="Node" parent="."]
script = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Node"]

[node name="CollisionShape" type="CollisionShape" parent="Node/StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Node/StaticBody"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="Node"]
transform = Transform( 0.5, 0.433013, -0.75, 0, 0.866025, 0.5, 0.866025, -0.25, 0.433013, 0, 3, 0 )

[node name="HUD" parent="." instance=ExtResource( 1 )]
team = "A"
camera = NodePath("../FreeCamera")

[node name="FreeCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 6, 12 )
script = ExtResource( 11 )

[node name="A" parent="." instance=ExtResource( 4 )]

[node name="Drone" parent="A" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 3, 0 )
team = "A"

[node name="StoragePod" parent="A" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1.8, 0 )
team = "A"

[node name="Vehicle" type="Spatial" parent="A"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985464, 0 )
script = ExtResource( 5 )
max_health = 0
team = "A"
_file = "user://vehicles/spaag.json"

[node name="B" parent="." instance=ExtResource( 4 )]

[node name="Target" parent="B" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.8, 29 )
max_health = 50000000
team = "B"
